# plumbline

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: tester-recruitment.md
src/plumbline/: __init__.py
src/plumbline/cli/: app.py
src/plumbline/context/: engine.py
src/plumbline/gate/: engine.py
src/plumbline/hooks/: btw.py
src/plumbline/mcp/: server.py
src/plumbline/verify/: engine.py
tests/: test_cli.py  test_engines_degraded.py  test_hook.py  test_server.py
